--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^3.8.10",
     "gulp-wrapper": "^0.1.5",
     "gulp-plumber": "^0.6.6",
-    "gulp-jshint": "^1.9.0"
+    "gulp-jshint": "^1.9.0",
+    "gulp-uglify": "^1.0.1"
   }
 }
