--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "opener": "^1.4.0",
-    "yuidocjs": "^0.3.50",
     "gulp": "^3.8.11",
+    "gulp-jshint": "^1.10.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-uglify": "^1.2.0",
     "gulp-wrapper": "^0.1.5",
-    "gulp-plumber": "^0.6.6",
-    "gulp-jshint": "^1.9.0",
-    "gulp-uglify": "^1.0.2"
+    "opener": "^1.4.1",
+    "yuidocjs": "^0.6.0"
   }
 }
