--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-jshint": "^1.11.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.2.0",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-wrapper": "^1.0.0",
+    "jshint": "^2.9.1",
     "opener": "^1.4.1",
-    "yuidocjs": "^0.6.0"
+    "yuidocjs": "^0.10.0"
   }
 }
